--- a/main.css
+++ b/main.css
@@ -1,14 +1,17 @@
-div.title {
-	height: 10em;
-    position: relative
+#title {
+	display: block;
+    height:100px; width: 260px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 200px;
 }
 
-div.title img {
-	 margin: 0;
-    background: yellow;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+input {
+	width:550px; height:25px;
+	/*text-align: center;*/
+	margin:auto;
+	margin-top: 20px;
+	display: block;
+	border:1px solid #72BCD4;
+	padding-top: 2px; padding-bottom: 2px
 }
