--- a/main.css
+++ b/main.css
@@ -15,3 +15,13 @@ input {
 	border:1px solid #72BCD4;
 	padding-top: 2px; padding-bottom: 2px
 }
+
+#voice_icon {
+	height:30px;
+	width:30px;
+	display:block;
+	margin:auto;
+	position:relative;
+	margin-top:-31px;
+	margin-right: 525px;
+}
