--- a/main.css
+++ b/main.css
@@ -1,21 +1,22 @@
 ul{
 	list-style-type: none;
-	margin:0px;
-	padding:0px;
+	margin-top:0px;
+	margin-right: ;
+	padding-right: 0px;
 }
 
 li {
-	display:block;
-	margin-right: 0px;
 	float: right;
+	display:block;
 }
 
 #title {
 	display: block;
     height:100px; width: 260px;
-    margin-left: auto;
-    margin-right: auto;
+    right: 50%;
+    margin-right: -130px;
     margin-top: 200px;
+    position: fixed;
 }
 
 form{
@@ -37,7 +38,6 @@ input {
 	width:30px;
 	display:block;
 	margin:auto;
-	position:relative;
 	margin-top:-31px;
 	margin-right: 525px;
 }
