--- a/main.css
+++ b/main.css
@@ -1,22 +1,41 @@
-ul{
+#header{
 	list-style-type: none;
-	margin-top:0px;
-	margin-right: ;
+	margin-top:-185px;
+	margin-right: 0px;
 	padding-right: 0px;
+	position: fixed;
+	right:0%;
+	margin-right: 10px
 }
 
-li {
-	float: right;
+.titleHeader {
+	float:right;
 	display:block;
+	padding-right: 10px;
+}
+
+#appDrawer {
+	height:20px; width: 20px;
+}
+
+#Notification {
+	margin-top: -7px;
+}
+
+a {
+	text-decoration: none;
+	color:black;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 #title {
 	display: block;
     height:100px; width: 260px;
-    right: 50%;
-    margin-right: -130px;
+    margin:auto;
     margin-top: 200px;
-    position: fixed;
 }
 
 form{
@@ -27,7 +46,7 @@ input {
 	width:550px; height:25px;
 	/*text-align: center;*/
 	margin:auto;
-	margin-top: 20px;
+	margin-top: 0px;
 	display: block;
 	border:1px solid #72BCD4;
 	padding-top: 2px; padding-bottom: 2px
@@ -51,4 +70,27 @@ input {
 	margin-right:10px;
 	border-color: #d4d4d4;
 	background-color: #ececec;
+	margin-top: 20px;
+}
+
+#divFooter {
+	background-color: gray;
+	margin-top: 325px;
+	overflow: auto;
+}
+
+#footer {
+	/*list-style-type: none;
+	margin-right: 0px;
+	padding-right: 0px;*/
+	/*position: fixed;*/
+	/*right:0%;
+	margin-right: 10px*/
+}
+
+.titleFooter {
+	float:right;
+	bottom:0%;
+	padding-right: 10px;
+	padding-top: 15px; padding-bottom: 15px;
 }
